@@ -4,10 +4,13 @@ use Moo::Role;
 
 sub force_row_limit {
    my $self  = shift;
+
+   return unless $self->page == 1;
+
    my $pager = $self->pager;
    my $rows  = $pager->entries_on_this_page;
 
-   return unless $rows < $pager->entries_per_page && $self->page == 1;
+   return unless $rows < $pager->entries_per_page;
 
    my $rs = $self->prepared_resultset;
 
